@@ -109,9 +109,9 @@ sub _create_atoms
             # abbreviatory noun, acronym: ΟΗΕ, ΝΑΤΟ, ΕΤΑ, ΣΕΒ, ΔΠΔΓ
             'RgAnXx' => ['pos' => 'noun', 'abbr' => 'abbr'],
             # foreign word in foreign script: Sudan, van, OLAF, of, Journal
-            'RgFwOr' => ['foreign' => 'foreign'],
+            'RgFwOr' => ['foreign' => 'fscript'],
             # foreign word transcribed to the Greek script: Ιράν, Ιράκ, Δρ, Μπους, Γιουστσένκο
-            'RgFwTr' => ['foreign' => 'foreign', 'other' => {'foreign' => 'transcript'}],
+            'RgFwTr' => ['foreign' => 'tscript'],
             # COMP = multi-word expression: εν_λόγω (this, said), εν_όψει (with a view), απ'_όλα (all), εν__λόγω, _εν_λόγω
             'COMP'   => ['other' => {'pos' => 'comp'}],
             # PUNCT = punctuation: ,, ., ", -, :
@@ -162,8 +162,9 @@ sub _create_atoms
                                                                                                             '@'   => 'PtOt' }}}}}},
                          'punc' => 'PUNCT',
                          '@'    => { 'abbr' => { 'abbr' => 'RgAbXx',
-                                                 '@'    => { 'foreign' => { 'foreign' => { 'other/foreign' => { 'transcript' => 'RgFwTr',
-                                                                                                                '@'          => 'RgFwOr' }},
+                                                 '@'    => { 'foreign' => { 'fscript' => 'RgFwOr',
+                                                                            'tscript' => 'RgFwTr',
+                                                                            'foreign' => 'RgFwTr',
                                                                             '@'       => { 'other/pos' => { 'comp' => 'COMP',
                                                                                                             '@'    => 'RgFwTr' }}}}}}}}
     );
